[project]
name = "rasterio-bug"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "james", email = "james.richardson@nala.earth"},
]
dependencies = [
    "rasterio>=1.3.10",
    "shapely>=2.0.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
